--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <title>yooooooooooooooooooooo<\title>
     <style>
       
 		* { margin: 0; padding: 0; }
@@ -18,8 +19,7 @@
     </style>
   </head>
   <body>
-    <div style="background-image: url('TOP SECRET DO NOT CLICK.png');">
-
+    
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
 </html>
