--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    
+    <img src=url("TOP SECRET DO NOT CLICK.png") />
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
 </html>
