--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>yooooooooooooooooooooo<\title>
+    <title>yooooooooooooooooooooo</title>
     <style>
       
 		* { margin: 0; padding: 0; }
