--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <link type="text/css" rel="stylesheet" href="main.css" />
 
-    <img class=imagespin src=url("TOP SECRET DO NOT CLICK2.png") />
+    <img class=imagespin src=url("TOP SECRET DO NOT CLICK.png") />
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
 </html>
