--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		* { margin: 0; padding: 0; }
 		
 		html { 
-			background: url("TOP SECRET DO NOT CLICK.png") no-repeat center center fixed; 
+			background: url("TOP_SECRET_DO_NOT_CLICK.png") no-repeat center center fixed; 
 			-webkit-background-size: cover;
 			-moz-background-size: cover;
 			-o-background-size: cover;
@@ -21,7 +21,7 @@
   <body>
     <link type="text/css" rel="stylesheet" href="main.css" />
 
-    <img class=imagespin src=url("TOP%20SECRET%20DO%20NOT%20CLICK2.png") />
+    <img class=imagespin src=url("TOP_SECRET_DO_NOT_CLICK.png") />
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
 </html>
