--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <body>
     <link type="text/css" rel="stylesheet" href="main.css" />
 
-    <img class=imagespin src=url("TOP_SECRET_DO_NOT_CLICK.png") />
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <img class=imagespin src=url('TOP_SECRET_DO_NOT_CLICK.png') />
   </body>
 </html>
