--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   <body>
     <link type="text/css" rel="stylesheet" href="main.css" />
 
-    <img class=imagespin src=url('TOP_SECRET_DO_NOT_CLICK.png') />
+    <img class=imagespin src=url(TOP_SECRET_DO_NOT_CLICK.png) />
   </body>
 </html>
