--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		* { margin: 0; padding: 0; }
 		
 		html { 
-			background: url("TOP_SECRET_DO_NOT_CLICK.png") no-repeat center center fixed; 
+			background: url("imgs/bg.png") no-repeat center center fixed; 
 			-webkit-background-size: cover;
 			-moz-background-size: cover;
 			-o-background-size: cover;
@@ -21,6 +21,8 @@
   <body>
     <link type="text/css" rel="stylesheet" href="main.css" />
 
-    <img class=imagespin src=url(TOP_SECRET_DO_NOT_CLICK.png) />
+	<img id=creepbg class=blinkbg src="imgs/creep2.png" />
+    <img id=trav class=imagespin src="imgs/trav2.png" />
+    <img id=creep class=blink src="imgs/creep.jpg" />
   </body>
 </html>
